Try to fix the encoding of user-provided URLs in generic scrapers